Fixed the z-index issue in resume button and added loading

--- a/app/components/navBar.module.css
+++ b/app/components/navBar.module.css
@@ -15,6 +15,7 @@
 .sticky {
   position: sticky;
   top: 0;
+  z-index: 2;
 }
 .nav {
   display: flex;
